# rust-mpi-benchmarks

./: .travis.yml  Cargo.toml  LICENSE  README.md
c/src/: Makefile
ci/: build-ompi.sh  run-bench.sh
